Day30-k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ipl-svc
spec:
  selector:
    app: ipl
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer

# svc type ExternalName

apiVersion: v1
kind: Service
metadata:
  name: ipl-svc
spec:
  selector:
    app: ipl
  ports:
    - protocol: TCP
      port: 80
      externalName: flipkart.com, amazon.com, google.com
  type: ExternalName
